# ynab-mcp-server

./: README.md  pyproject.toml
src/ynab_mcp_server/: cli.py  post_install.py
